// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`addDependency() 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.acme</groupId>
    <artifactId>my-artifact</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <dependencies>
        <dependency>
            <groupId>software.amazon.awscdk</groupId>
            <artifactId>core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>[3.18.1,4.0.0)</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->"
`;

exports[`addPlugin() 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.acme</groupId>
    <artifactId>my-artifact</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.projen</groupId>
                        <artifactId>projen</artifactId>
                        <version>[0.14.0,0.15.0)</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
                <executions>
                    <execution>
                        <id>shade-task</id>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <mainClass>com.myorg.Play202101050157App</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.projen</groupId>
                <artifactId>projen</artifactId>
                <version>[0.14.0,0.15.0)</version>
            </plugin>
        </plugins>
    </build>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->"
`;

exports[`addPlugin() with multiple executions 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.acme</groupId>
    <artifactId>my-artifact</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.projen</groupId>
                        <artifactId>projen</artifactId>
                        <version>[0.14.0,0.15.0)</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
                <executions>
                    <execution>
                        <id>shade-task</id>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                        <configuration>
                            <source>1.8</source>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.projen</groupId>
                <artifactId>projen</artifactId>
                <version>[0.14.0,0.15.0)</version>
            </plugin>
        </plugins>
    </build>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->"
`;

exports[`addPluginRepository() 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.acme</groupId>
    <artifactId>my-artifact</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <pluginRepositories>
        <pluginRepository>
            <id>my-local-repository</id>
            <url>file://my/local/repository</url>
        </pluginRepository>
        <pluginRepository>
            <id>my-remote-repository</id>
            <name>Remote Repo</name>
            <url>https://myserver/repo</url>
            <layout>default</layout>
            <snapshots>
                <checksumPolicy>fail</checksumPolicy>
                <updatePolicy>interval:50</updatePolicy>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->"
`;

exports[`addProperty() 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.acme</groupId>
    <artifactId>my-artifact</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.7.0</junit.version>
    </properties>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->"
`;

exports[`addRepository() 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.acme</groupId>
    <artifactId>my-artifact</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
    <repositories>
        <repository>
            <id>my-local-repository</id>
            <url>file://my/local/repository</url>
        </repository>
        <repository>
            <id>my-remote-repository</id>
            <name>Remote Repo</name>
            <url>https://myserver/repo</url>
            <layout>default</layout>
        </repository>
    </repositories>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->"
`;

exports[`group/artifact/version 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>my.group.id</groupId>
    <artifactId>mfoo-bar</artifactId>
    <version>1.2.3</version>
    <packaging>jar</packaging>
    <name>my-project</name>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->"
`;

exports[`optional metadata 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>my.group.id</groupId>
    <artifactId>mfoo-bar</artifactId>
    <version>1.2.3</version>
    <packaging>not_jar</packaging>
    <name>my-project</name>
    <description>hello, world!</description>
    <url>https://foo/bar</url>
    <parent>
        <groupId>my.parent.group.id</groupId>
        <artifactId>foo-bar-parent</artifactId>
        <relativePath>../home</relativePath>
        <version>0.0.1</version>
    </parent>
</project>
<!-- ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen". -->"
`;
